--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:mysql://blog-application.cnsha0nknmmv.us-east-1.rds.amazonaws.com:3306/reservedBlog
-spring.datasource.username=admin
-spring.datasource.password=adminblog
+#spring.datasource.url=jdbc:mysql://blog-application.cnsha0nknmmv.us-east-1.rds.amazonaws.com:3306/reservedBlog
+#spring.datasource.username=admin
+#spring.datasource.password=adminblog
+
+spring.datasource.url=jdbc:mysql://localhost:3306/reservedBlogApp
+spring.datasource.username=root
+spring.datasource.password=Ali33389942
 
 #local DB Erik for local testing
 #spring.datasource.url = jdbc:mysql://localhost:3306/blog_central
@@ -18,7 +22,7 @@ spring.jpa.hibernate.dll-auto= update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
+spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
 
 
 server.port = 8181
